--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ html2text==2024.2.26
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.3
-huggingface-hub==0.35.3
+huggingface-hub==0.23.2
 idna==3.11
 Jinja2==3.1.6
 jiter==0.11.1
@@ -116,3 +116,6 @@ urllib3==2.5.0
 xxhash==3.6.0
 yarl==1.22.0
 zstandard==0.23.0
+typer>=0.12
+unstructured[all-docs]>=0.15
+langgraph>=0.2
