--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,6 @@ html2text==2024.2.26
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.3
-huggingface-hub==0.23.2
 idna==3.11
 Jinja2==3.1.6
 jiter==0.11.1
@@ -43,12 +42,10 @@ jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.79
-langchain-huggingface==0.1.2
-langchain-openai==0.3.7
-langchain-text-splitters==0.3.11
+langchain>=1.0.0,<2.0.0
+langchain-openai>=1.0.0,<2.0.0
+langsmith>=0.3.0
+langgraph>=1.0.0,<2.0.0
 langsmith==0.3.45
 lxml==5.3.1
 MarkupSafe==3.0.3
@@ -62,7 +59,7 @@ narwhals==2.8.0
 nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.4
-openai==1.64.0
+openai>=1.109.1,<3.0.0
 orjson==3.11.3
 packaging==25.0
 pandas==2.3.3
