--- a/requirements.txt
+++ b/requirements.txt
@@ -46,8 +46,10 @@ langchain-anthropic>=0.2.0
 langchain-google-genai>=1.0.0
 langchain>=1.0.0,<2.0.0
 langchain-openai>=0.2.0
+langchain-ollama
 langsmith>=0.3.0
 langgraph>=0.2.0
+langgraph-cli[inmem]
 langsmith==0.3.45
 lxml==5.3.1
 MarkupSafe==3.0.3
