--- a/config/rag.yaml
+++ b/config/rag.yaml
@@ -14,7 +14,7 @@ rag:
   llm:
     provider: "ollama" # "openai"
     model: "qwen2.5:3b" #  "llama3.2:1b" # "gpt-4o-mini"
-    base_url: "http://ollama:11434" # service name
+    base_url: "http://host.docker.internal:11434" # macOS host Ollama (Metal). For Docker-to-Docker, use http://ollama:11434
 
   embedding:
     model: "mxbai-embed-large" # "nomic-embed-text" #"text-embedding-3-small"
