--- a/requirements.txt
+++ b/requirements.txt
@@ -42,13 +42,13 @@ jsonpointer==3.0.0
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
-langchain-anthropic>=0.2.0
-langchain-google-genai>=1.0.0
-langchain>=1.0.0,<2.0.0
-langchain-openai>=0.2.0
-langchain-ollama
-langgraph>=0.2.0
-langgraph-cli[inmem]
+langchain-anthropic==1.3.1
+langchain-google-genai==4.2.0
+langchain==1.2.6
+langchain-openai==1.1.7
+langchain-ollama==1.0.1
+langgraph==1.0.6
+langgraph-cli[inmem]==0.4.11
 langsmith==0.3.45
 lxml==5.3.1
 MarkupSafe==3.0.3
@@ -62,7 +62,7 @@ narwhals==2.8.0
 nest-asyncio==1.6.0
 networkx==3.5
 numpy==2.3.4
-openai>=1.109.1,<3.0.0
+openai==2.15.0
 orjson==3.11.3
 packaging==25.0
 pandas==2.3.3
@@ -115,18 +115,18 @@ urllib3==2.5.0
 xxhash==3.6.0
 yarl==1.22.0
 zstandard==0.23.0
-typer>=0.12
-unstructured[all-docs]>=0.15
-opentelemetry-api
-opentelemetry-sdk
-opentelemetry-exporter-otlp-proto-http
-opentelemetry-instrumentation
-opentelemetry-instrumentation-fastapi
-opentelemetry-instrumentation-requests
-opentelemetry-instrumentation-httpx
-opentelemetry-instrumentation-logging
-fastapi
-uvicorn[standard]
-langchain-aws>=0.1.0
-boto3>=1.34.0
-psycopg[binary]
+typer==0.21.1
+unstructured[all-docs]==0.18.27
+opentelemetry-api==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-exporter-otlp-proto-http==1.39.1
+opentelemetry-instrumentation==0.60b1
+opentelemetry-instrumentation-fastapi==0.60b1
+opentelemetry-instrumentation-requests==0.60b1
+opentelemetry-instrumentation-httpx==0.60b1
+opentelemetry-instrumentation-logging==0.60b1
+fastapi==0.128.0
+uvicorn[standard]==0.40.0
+langchain-aws==1.2.1
+boto3==1.42.31
+psycopg[binary]==3.3.2
